# typedlua

./: .gitignore  .gitmodules  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  TODO.md  dhat-heap.json  fix_type_checker.py  func_test.tl  global_localization.rs  tarpaulin.toml  test.tl  test_func.tl  test_ref
benches/: CLAUDE.md
crates/typedlua-cli/: Cargo.toml
crates/typedlua-cli/benches/: parallel_optimization.rs
crates/typedlua-cli/output/: test.lua
crates/typedlua-cli/src/: CLAUDE.md  main.rs
crates/typedlua-cli/tests/: cli_edge_cases_tests.rs  cli_features_tests.rs  integration_tests.rs  integration_tests.rs.bak2  integration_tests.rs.bak3  lua_file_copy_tests.rs  watch_mode_tests.rs
crates/typedlua-core/: Cargo.toml  dhat-heap.json
crates/typedlua-core/benches/: lexer_bench.rs  parser_bench.rs  reflection_bench.rs  type_checker_bench.rs
crates/typedlua-core/examples/: profile_allocations.rs  profile_parser.rs
crates/typedlua-core/fuzz/: Cargo.toml
crates/typedlua-core/src/: CLAUDE.md  arena.rs  arena_usage.md  config.rs  di.rs  diagnostics.rs  diagnostics_examples.md  error_codes_example.md  fs.rs  lib.rs  span.rs  string_interner.rs  type_checker.rs
crates/typedlua-core/src/ast/: expression.rs  mod.rs  pattern.rs  statement.rs  types.rs
crates/typedlua-core/src/cache/: error.rs  hash.rs  invalidation.rs  manager.rs  manifest.rs  mod.rs  module.rs
crates/typedlua-core/src/codegen/: builder.rs  classes.rs  decorators.rs  enums.rs  expressions.rs  mod.rs  mod.rs.orig  modules.rs  patterns.rs  scope_hoisting.rs  sourcemap.rs  statements.rs  tree_shaking.rs
crates/typedlua-core/src/codegen/expressions/: binary_ops.rs  calls.rs  literals.rs
crates/typedlua-core/src/codegen/snapshots/: typedlua_core__codegen__tests__snapshot_arrays_and_objects.snap  typedlua_core__codegen__tests__snapshot_arrow_function.snap  typedlua_core__codegen__tests__snapshot_bitwise_lua51.snap  typedlua_core__codegen__tests__snapshot_bitwise_lua52.snap  typedlua_core__codegen__tests__snapshot_bitwise_lua53.snap  typedlua_core__codegen__tests__snapshot_complex_expressions.snap  typedlua_core__codegen__tests__snapshot_control_flow.snap  typedlua_core__codegen__tests__snapshot_function_declaration.snap  typedlua_core__codegen__tests__snapshot_string_literals.snap  typedlua_core__codegen__tests__snapshot_variable_declarations.snap
crates/typedlua-core/src/lexer/: mod.rs  token.rs
crates/typedlua-core/src/module_resolver/: mod.rs  registry.rs
crates/typedlua-core/src/optimizer/: aggressive_inlining.rs  devirtualization.rs  interface_inlining.rs  method_to_function_conversion.rs  mod.rs  operator_inlining.rs  passes.rs  rich_enum_optimization.rs  whole_program_analysis.rs
crates/typedlua-core/src/optimizer/passes/: algebraic_simplification.rs  constant_folding.rs  dead_code_elimination.rs  dead_store_elimination.rs  function_inlining.rs  generic_specialization.rs  global_localization.rs  loop_optimization.rs  mod.rs  string_concat_optimization.rs  table_preallocation.rs  tail_call_optimization.rs
crates/typedlua-core/src/parser/: CLAUDE.md  expression.rs  mod.rs  pattern.rs  statement.rs  tests.rs  types.rs
crates/typedlua-core/src/stdlib/: builtins.d.tl  lua51.d.tl  lua52.d.tl  lua53.d.tl  lua54.d.tl  mod.rs
crates/typedlua-core/src/typechecker/: CLAUDE.md  generics.rs  mod.rs  narrowing.rs  narrowing_integration.rs  symbol_table.rs  tests.rs  type_checker.rs  type_compat.rs  type_environment.rs  utility_types.rs
crates/typedlua-core/src/typechecker/visitors/: access_control.rs  inference.rs  mod.rs
crates/typedlua-core/src/typechecker/visitors/access_control/: access_control_tests.rs
crates/typedlua-core/src/typechecker/visitors/inference/: inference_tests.rs
crates/typedlua-core/tests/: access_modifiers_tests.rs  aggressive_inlining_tests.rs  bang_operator_tests.rs  builtin_decorator_tests.rs  codegen_patterns_tests.rs  config_tests.rs  dead_store_elimination_tests.rs  decorator_tests.rs  decorator_validation_tests.rs  destructuring_tests.rs  devirtualization_tests.rs  edge_cases_tests.rs  error_classes_tests.rs  error_conditions_comprehensive.rs  error_path_tests.rs  exception_handling_edge_cases.rs  exception_handling_tests.rs  exception_optimization_tests.rs  exhaustiveness_tests.rs  feature_interactions_tests.rs  final_tests.rs  function_inlining_tests.rs  generic_specialization_tests.rs  generics_advanced_tests.rs  index_signature_tests.rs  interface_default_methods_tests.rs  interface_inlining_tests.rs  interface_method_signature_tests.rs  loop_optimization_tests.rs  method_to_function_tests.rs  module_edge_cases_tests.rs  module_system_tests.rs  module_system_tests.rs.bak2  module_system_tests.rs.bak3  module_system_tests.rs.bak4  multi_return_tests.rs  namespace_tests.rs  null_coalescing_iife_tests.rs  null_coalescing_tests.rs  o1_combined_tests.rs  (+35 more)
crates/typedlua-lsp/: Cargo.toml
crates/typedlua-lsp/src/: document.rs  lib.rs  main.rs  message_handler.rs  symbol_index.rs
crates/typedlua-lsp/src/providers/: code_actions.rs  completion.rs  definition.rs  diagnostics.rs  folding_range.rs  formatting.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_lexeme.rs  semantic_tokens.rs  signature_help.rs  symbols.rs
crates/typedlua-lsp/tests/: lsp_integration_tests.rs  lsp_tests.rs  message_handler_tests.rs
crates/typedlua-test-helpers/: Cargo.toml
crates/typedlua-test-helpers/src/: compile.rs  fixtures.rs  lib.rs  mocks.rs
docs/: ARCHITECTURE.md  ARENA_PERFORMANCE.md  AST-Structure.md  CLAUDE.md  CLI-Design.md  CODE_ORGANIZATION_REVIEW.md  Grammar.md  IMPLEMENTATION.md  LANGUAGE_FEATURES.md  LSP-Design.md  Optimizations.md  REFLECTION.md  SECURITY.md  STRING_INTERNER.md  StringInternerChange.md  Test-Failures.md  TypedLua-Design.md  file-extension-migration.md  parallel-optimization-plan.md  profiling-guide.md
examples/: null_coalesce_simple.tl  null_coalescing_example.tl  reflection_example.tl
runtime/: typedlua_runtime.lua
(+73 files in other folders)
