[workspace]
members = [
    "crates/typedlua-core",
    "crates/typedlua-cli",
    "crates/typedlua-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TypedLua Contributors"]
license = "MIT"
repository = "https://github.com/forge18/typed-lua"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File watching
notify = "7.0"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Memory management
bumpalo = "3.16"
rustc-hash = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Parallel processing
rayon = "1.10"

# Testing
insta = "1.40"
criterion = "0.5"
