[workspace]
members = [
    "crates/typedlua-core",
    "crates/typedlua-cli",
    "crates/typedlua-lsp",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["TypedLua Contributors"]
license = "MIT"
repository = "https://github.com/forge18/typed-lua"

[workspace.dependencies]
# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
base64 = "0.22"
bincode = "1.3"

# Hashing
blake3 = "1.5"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File watching
notify = "7.0"

# LSP
lsp-server = "0.7"
lsp-types = "0.97"
crossbeam-channel = "0.5"

# Memory management
bumpalo = "3.16"
rustc-hash = "2.1"
id-arena = "2.2"
indexmap = "2.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Parallel processing
rayon = "1.10"

# Testing
insta = "1.40"
criterion = "0.5"
tempfile = "3.13"
indoc = "2.0"
proptest = "1.5"
dhat = "0.3"

# Development tools (not used in production code)
cargo-fuzz = "0.12"

[profile.release]
# Enable Link-Time Optimization for smaller, faster binaries
# This enables cross-crate inlining and better dead code elimination
# Trade-off: Slower release builds (~2-5x), but worth it for distributed binaries
lto = true

# Use a single codegen unit for maximum optimization
# Default is 16 for faster parallel compilation, but 1 gives best optimization
# Trade-off: Slower builds, better runtime performance
codegen-units = 1

# Strip debug symbols and line tables from release binaries
# Reduces binary size significantly (~30-50%)
strip = true

# Abort on panic instead of unwinding (smaller, faster binaries)
# TypedLua doesn't rely on panic unwinding, so this is safe
panic = "abort"
