[package]
name = "typedlua-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typedlua"
path = "src/main.rs"

[dependencies]
typedlua-core = { path = "../typedlua-core" }
typedlua-parser = { path = "../typedlua-parser" }
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
