[package]
name = "typedlua-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typedlua"
path = "src/main.rs"

[dependencies]
typedlua-core = { path = "../typedlua-core" }
typedlua-parser = { git = "https://github.com/forge18/typedlua-parser.git" }
clap.workspace = true
anyhow.workspace = true
notify.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rayon.workspace = true
rustc-hash.workspace = true
walkdir = "2.5"
glob = "0.3"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
