[package]
name = "typedlua-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
base64.workspace = true
bumpalo.workspace = true
rustc-hash.workspace = true
tracing.workspace = true

[dev-dependencies]
insta.workspace = true
criterion.workspace = true
