[package]
name = "typedlua-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typedlua-lsp"
path = "src/main.rs"

[dependencies]
typedlua-core = { path = "../typedlua-core" }
tower-lsp.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
