[package]
name = "typedlua-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "typedlua-lsp"
path = "src/main.rs"

[dependencies]
typedlua-core = { path = "../typedlua-core" }
lsp-server.workspace = true
lsp-types.workspace = true
crossbeam-channel.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
